# robothon-2023-byod

./: CMakeLists.txt  README.md  package.xml
config/: ws_repos.yaml
config/byod/: default_byod_order.yaml
launch/: launch_robot.xml  main_byod.launch
src/: main_byod.cpp
src/tasks/: battery_opening_byod.cpp  battery_screening_byod.cpp  power_on_voltmeter_byod.cpp  probe_circuit_byod.cpp
