<?xml version="1.0"?>
<package format="2">
  <name>hrii_robothon_byod</name>
  <version>0.0.0</version>
  <description>The hrii_robothon_byod package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="afortuna@todo.todo">afortuna</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>hrii_gri_interface</depend>
  <depend>hrii_trajectory_planner</depend>
  <depend>hrii_robothon_msgs</depend>


</package>